--- a/test.html
+++ b/test.html
@@ -177,19 +177,21 @@
 
     </form>
   </div>
-  <script>
+<script>
 // rentalForm.js
 ;(function(){
   const steps     = document.querySelectorAll('.form-step');
   const nexts     = document.querySelectorAll('.btn-next');
   const prevs     = document.querySelectorAll('.btn-prev');
   const prog      = document.querySelector('.progress-inner');
+
+  // Step 5
   const daysInput = document.getElementById('days');
   const daysVal   = document.getElementById('days-value');
   const retDate   = document.getElementById('return-date');
-  const step55    = document.getElementById('step5-5');
 
-  // Step5.5 用要素
+  // Step 5.5 container
+  const step55    = document.getElementById('step5-5');
   const visitGrp   = document.getElementById('visit-time-group');
   const visitSel   = document.getElementById('visit-time-select');
   const delSvcGrp  = document.getElementById('delivery-service-group');
@@ -198,11 +200,11 @@
   const delTimeGrp = document.getElementById('delivery-time-group');
   const delTimeSel = document.getElementById('delivery-time-select');
 
-  // 日数増減ボタン
+  // 日数増減
   const increase = document.getElementById('days-increase');
   const decrease = document.getElementById('days-decrease');
 
-  // 郵便番号API／免許番号API／オプション用要素
+  // 郵便番号API／免許番号／オプション用要素
   const pZip     = document.getElementById('p-zip');
   const cZip     = document.getElementById('c-zip');
   const pAddress = document.getElementById('p-address');
@@ -219,18 +221,13 @@
 
   let idx = 0;
 
-  // プログレスバー更新
   function updateProgress(){
     prog.style.width = (idx / (steps.length - 1) * 100) + '%';
   }
-
-  // 次へボタン有効化判定
   function updateNext(){
     const fields = Array.from(steps[idx].querySelectorAll('input,select,textarea'));
-    nexts[idx].disabled = !fields.every(f => f.disabled || f.checkValidity());
+    nexts[idx].disabled = !fields.every(f=> f.disabled || f.checkValidity());
   }
-
-  // 返却予定日計算
   function calcReturn(){
     const sd = document.getElementById('start-date').value;
     const days = +daysInput.value;
@@ -240,30 +237,26 @@
       retDate.value = d.toISOString().slice(0,10);
     }
   }
-
-  // 来店時刻オプション生成（15分刻み）
   function populateVisitTimes(){
     visitSel.innerHTML = '';
     const sd = document.getElementById('start-date').value;
     const d  = sd ? new Date(sd) : new Date();
-    const day = d.getDay(); // 0:日曜, 1-5:平日, 6:土曜
-    const startH = (day >= 1 && day <= 5) ? 9 : 10;
-    const endH   = (day >= 1 && day <= 5) ? 17.5 : 15.5;
-    for(let t = startH; t < endH; t += 0.25){
+    const day = d.getDay();
+    const startH = (day>=1&&day<=5)?9:10;
+    const endH   = (day>=1&&day<=5)?17.5:15.5;
+    for(let t=startH; t<endH; t+=0.25){
       const hh  = Math.floor(t),
-            mm  = Math.round((t - hh) * 60),
-            t2  = t + 0.25,
+            mm  = Math.round((t-hh)*60),
+            t2  = t+0.25,
             hh2 = Math.floor(t2),
-            mm2 = Math.round((t2 - hh2) * 60),
+            mm2 = Math.round((t2-hh2)*60),
             txt = `${String(hh).padStart(2,'0')}:${String(mm).padStart(2,'0')}〜${String(hh2).padStart(2,'0')}:${String(mm2).padStart(2,'0')}`;
       visitSel.insertAdjacentHTML('beforeend', `<option value="${txt}">${txt}</option>`);
     }
   }
-
-  // 配送希望時間生成（30分刻み）
   function populateDeliveryTimes(){
     delTimeSel.innerHTML = '';
-    for(let h = 10; h < 17; h++){
+    for(let h=10; h<17; h++){
       const o1 = `${String(h).padStart(2,'0')}:00〜${String(h).padStart(2,'0')}:30`;
       const o2 = `${String(h).padStart(2,'0')}:30〜${String(h+1).padStart(2,'0')}:00`;
       delTimeSel.insertAdjacentHTML('beforeend', `<option value="${o1}">${o1}</option>`);
@@ -271,29 +264,20 @@
     }
   }
 
-  // ステップ表示切替
   function show(i){
-    steps.forEach((s,j) => s.classList.toggle('active', j === i));
+    // アクティブステップ切替
+    steps.forEach((s,j)=> s.classList.toggle('active', j===i));
     updateProgress();
 
-    // Step5.5 要素は一旦全隠し
-    step55.style.display = 'none';
-    [visitGrp, delSvcGrp, locGrp, addrGrp, delTimeGrp].forEach(el => el.classList.add('hidden'));
+    // Step5.5全要素いったん隠す
+    step55.style.display='none';
+    [visitGrp,delSvcGrp,locGrp,addrGrp,delTimeGrp].forEach(el=>el.classList.add('hidden'));
 
-    // Step2: 個人/法人 切替
-    if(i === 1){
-      const isCorp = document.getElementById('use-corporate').checked;
-      document.getElementById('personal-info' ).style.display = isCorp ? 'none'  : 'block';
-      document.getElementById('corporate-info').style.display = isCorp ? 'block' : 'none';
-      document.querySelectorAll('#personal-info input,#personal-info select,#personal-info textarea')
-              .forEach(e => e.disabled = isCorp);
-      document.querySelectorAll('#corporate-info input,#corporate-info select,#corporate-info textarea')
-              .forEach(e => e.disabled = !isCorp);
-    }
+    // Step2: 個人/法人 切替（省略）
 
-    // Step5.5 分岐表示
-    if(i === 5){
-      step55.style.display = 'block';
+    // Step5.5 表示・中身切替
+    if(i===5){
+      step55.style.display='block';
       const days = +daysInput.value;
       if(days < 30){
         visitGrp.classList.remove('hidden');
@@ -304,127 +288,98 @@
       }
     }
 
-    // Step5 で7日未満は自動丸め
-    if(i === 4 && +daysInput.value < 7){
-      daysInput.value = 7;
-      daysVal.textContent = '7';
+    // ステップ5で7日未満は丸め
+    if(i===4 && +daysInput.value<7){
+      daysInput.value=7;
+      daysVal.textContent='7';
       calcReturn();
-    }
-
-    // 7～29日は 5.5 終了後自動でステップ6へ
-    if(i === 5 && +daysInput.value < 30){
-      idx = 6;
-      show(idx);
-      return;
     }
 
     updateNext();
   }
 
-  // イベント登録：バリデーションチェック
-  steps.forEach(step => {
-    step.querySelectorAll('input,select,textarea').forEach(el => {
+  // 初期登録：バリデーション
+  steps.forEach(step=>{
+    step.querySelectorAll('input,select,textarea').forEach(el=>{
       el.addEventListener('input', updateNext);
       el.addEventListener('change', updateNext);
     });
   });
-
-  // 日数増減ボタン
+  // 日数増減
   increase.addEventListener('click', ()=>{
-    daysInput.value = +daysInput.value + 1;
-    daysVal.textContent = daysInput.value;
-    calcReturn();
-    updateNext();
+    daysInput.value = +daysInput.value+1; daysVal.textContent = daysInput.value; calcReturn(); updateNext();
   });
   decrease.addEventListener('click', ()=>{
-    if(+daysInput.value > 7){
-      daysInput.value = +daysInput.value - 1;
-      daysVal.textContent = daysInput.value;
-      calcReturn();
-      updateNext();
+    if(+daysInput.value>7){
+      daysInput.value = +daysInput.value-1; daysVal.textContent = daysInput.value; calcReturn(); updateNext();
     }
   });
 
-  // 郵便番号 → 数字以外除去 + Blur で API
-  [pZip, cZip].forEach(z => {
+  // 郵便番号API
+  [pZip,cZip].forEach(z=>{
     if(!z) return;
-    z.addEventListener('input', ()=> z.value = z.value.replace(/\D/g,''));
+    z.addEventListener('input', ()=> z.value=z.value.replace(/\D/g,''));
     z.addEventListener('blur', ()=>{
       fetch(`https://zipcloud.ibsnet.co.jp/api/search?zipcode=${z.value}`)
         .then(r=>r.json()).then(j=>{
           if(j.results){
-            const r = j.results[0];
-            const addr = r.address1 + r.address2 + r.address3;
-            (z===pZip? pAddress: cAddress).value = addr;
+            const r=j.results[0],
+                  addr=r.address1+r.address2+r.address3;
+            (z===pZip? pAddress: cAddress).value=addr;
           }
         });
     });
   });
-
-  // 免許証番号 12桁チェック
+  // 免許12桁
   if(pLicense){
     pLicense.addEventListener('input', ()=>{
-      if(pLicense.value && pLicense.value.length !== 12){
-        pLicense.setCustomValidity('12ケタの数字を入力してください');
-      } else {
-        pLicense.setCustomValidity('');
-      }
+      if(pLicense.value && pLicense.value.length!==12) pLicense.setCustomValidity('12ケタの数字を入力してください');
+      else pLicense.setCustomValidity('');
       pLicense.reportValidity();
     });
   }
-
-  // オプション「全て加入しない」排他制御
+  // オプション排他
   if(optNone){
-    optNone.addEventListener('change', ()=>{
-      if(optNone.checked) others.forEach(o=>o.checked=false);
-      updateNext();
-    });
+    optNone.addEventListener('change', ()=>{ if(optNone.checked) others.forEach(o=>o.checked=false); updateNext(); });
   }
   others.forEach(o=>{
     if(!o) return;
-    o.addEventListener('change', ()=>{
-      if(o.checked) optNone.checked = false;
-      updateNext();
-    });
+    o.addEventListener('change', ()=>{ if(o.checked) optNone.checked=false; updateNext(); });
   });
 
-  // 配送サービス利用の有無 切替
+  // 配送サービス利用
   document.getElementById('del-yes').addEventListener('change', ()=>{
     locGrp.classList.remove('hidden');
     delTimeGrp.classList.remove('hidden');
-    if(document.getElementById('loc-different').checked){
-      addrGrp.classList.remove('hidden');
-    }
+    if(document.getElementById('loc-different').checked) addrGrp.classList.remove('hidden');
   });
   document.getElementById('del-no').addEventListener('change', ()=>{
-    // 配送パート隠して来店時刻だけ表示
     [delSvcGrp,locGrp,addrGrp,delTimeGrp].forEach(el=>el.classList.add('hidden'));
     visitGrp.classList.remove('hidden');
     populateVisitTimes();
     updateNext();
   });
-
-  // 配送場所（住所と同じ/異なる）切替
+  // 配送場所切替
   document.getElementById('loc-same').addEventListener('change', ()=> addrGrp.classList.add('hidden'));
   document.getElementById('loc-different').addEventListener('change', ()=> addrGrp.classList.remove('hidden'));
 
-  // 次へ／戻るナビゲーション
+  // ナビゲーション
   nexts.forEach((btn,i)=>{
     btn.addEventListener('click', ()=>{
       if(btn.disabled) return;
-      // Step5（index=4）→常に5.5
-      if(i === 4) idx = 5;
-      else           idx = i + 1;
+      if(i===4)      idx=5;      // Step5→Step5.5
+      else if(i===5) idx=6;      // Step5.5→Step6
+      else            idx=i+1;   // それ以外
       show(idx);
     });
   });
   prevs.forEach(btn=>{
     btn.addEventListener('click', ()=>{
-      if(idx > 0){ idx--; show(idx); }
+      if(idx>0){ idx--; show(idx); }
     });
   });
 
-  // 最初は Step1
+  // 初期表示
   show(0);
 
 })();
